--- a/project.Rmd
+++ b/project.Rmd
@@ -14,16 +14,27 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r bees}
+# Load packages (install first if needed)
+library(dplyr)
+library(readr)  
+library(sf)      
+
+# Path to your file
+bee_path <- "/Users/andrecc/Desktop/DSCI/410Project/OBA_2018-2024.csv"
+
+# Read in
+bee_raw <- read_csv(bee_path)
+
+# Quick peek
+glimpse(bee_raw)
+
 ```
 
-## Including Plots
+```{r}
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
